add request history part of working with database
